# discidium

./: Cargo.toml  Dioxus.toml  README.md  discidium-ce0f138dea2fd8c9.js  discidium-ce0f138dea2fd8c9_bg.wasm  flake.nix  index.html  styles-9225bdcd827fc2c6.css  tailwind-a3557984c4828eac.css  tailwind.config.js
.github/workflows/: githubpages.yml
assets/styling/: main.css
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: client.rs  connection.rs  mod.rs  model.rs  ratelimit.rs  state.rs  user.rs  websocket.rs
src/ui/: central_panel.rs  logged_in.rs  login.rs  mod.rs
src/ui/components/: login.rs
