[package]
name = "discidium"
version = "0.1.0"
authors = ["ominit"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
dioxus = { version = "0.6.1" }
ewebsock = { git = "https://github.com/c-git/ewebsock/", branch = "wss_support", features = ["tls", "rustls_ring"] }
flate2 = "1.0.35"
futures = "0.3.31"
keyring = { version = "3.6.1", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
] }
reqwest = { version = "0.12.12", features = ["json"] }
secrecy = "0.10.3"
serde_json = "1.0.135"
whoami = "1.5.2"

[features]
default = ["desktop"]
# web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
# mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
