[package]
name = "discidium"
version = "0.1.0"
authors = ["ominit"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
flate2 = "1.0.35"
futures = "0.3.31"
js-sys = { version = "0.3.76" }
keyring = { version = "3.6.1", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
] }
reqwest = { version = "0.12.12", features = ["json"] }
secrecy = "0.10.3"
serde_json = "1.0.135"
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = { version = "0.2.99" }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.76", features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
] }
whoami = "1.5.2"
ewebsock = "0.8.0"

[workspace]
members = ["src-tauri"]
